Make sure that the UI covers everything

--- a/ui/ui.css
+++ b/ui/ui.css
@@ -9,7 +9,7 @@
 	height: 100%;
 	width: 100%;
 	min-width: 900px;
-	z-index: 9999;
+	z-index: 2147483647;
 	overflow: hidden;
 	background: #7f8c8d;
 	font-family: Lato, Helvetica, Arial, sans-serif;
